--- a/src/components/header/Banner.css
+++ b/src/components/header/Banner.css
@@ -11,58 +11,51 @@
   }
   .slide-content{
     position: absolute;
-      top: 20%;
-      left: 10%;
+      top: 40%;
+      left: 30%;
       transform: translate(-50%, -50%);
       text-align: center;
-      color: #000;
+
+     
   }
-  .slide-content span{
-    color: rgb(95,199,174);
-  }
-  
-  .slide-content p{
-    font-size: 20px;
-    margin-top: 10px;
-    font-family: Courgette,cursive;
-  }
+  /* .slide-content span{ */
+    /* color: rgb(95,199,174); */
+  /* } */
+  /*  */
+  /* .slide-content p{ */
+    /* font-size: 20px; */
+    /* margin-top: 10px; */
+    /* font-family: Courgette,cursive; */
+  /* } */
   
   .slide img {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: relative;
    width: 100%;
    max-width: 100%;
   
   }
+  .slick-track {
+    background: black;
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1;
+}
   
   
-  .slider-btn {
-  background: transparent;
-  color: #666666;
-  display: inline-block;
-  border: 1px solid #5FC7AE;
-  font-size: 14px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  line-height: 36px;
-  overflow: hidden;
-  padding: 0 30px;
-  border-radius: 25%;
-  position: relative;
-  bottom: 260px;
-  left:8.5%;
-  text-align: center;
-  text-transform: uppercase;
-  -webkit-transition: all 0.5s ease 0s;
-  transition: all 0.5s ease 0s;
-  }
+ 
   .arrow-prev{
     line-height: 80px;
     
     height: 80px;
   position: absolute;
-  top: 50%;
+  top: 70%;
+
   transform: translateY(-50%);
   font-size: 24px;
   color: #fff;
@@ -80,7 +73,7 @@
     
       height: 80px;
     position: absolute;
-    top: 50%;
+    top: 70%;
     transform: translateY(-50%);
     font-size: 24px;
     color: #fff;
@@ -100,11 +93,11 @@
   }
   
   .arrow-prev {
-    left: 20px;
+    left: 10%;
   }
   
   .arrow-next {
-    left: 120px;
+    left: 16%;
   }
   
   
@@ -118,27 +111,29 @@
   }
   
   
-  .subhead h2{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 40%;
-    left: 30%;
-    font-weight: 400!important;
-    font-size: 25px;
-    color: #7f7f7f;
-    font-family: 'Montserrat', sans-serif!important;
-    letter-spacing: 3px;
-    margin-bottom: 20px;
-  }
+  /* .subhead h2{ */
+    /* position: absolute; */
+    /* width: 100%; */
+    /* height: 100%; */
+    /* top: 40%; */
+    /* left: 30%; */
+    /* font-weight: 400!important; */
+    /* font-size: 25px; */
+    /* color: #1b1919; */
+    /* font-family: 'Montserrat', sans-serif!important; */
+    /* letter-spacing: 3px; */
+    /* margin-bottom: 20px; */
+  /* } */
   .caption h2 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 27%;
-    left: 10%;
-   /* font-size: 35px; */
-   color: rgb(54, 54, 54);
+    font-size: 70px;
+    font-weight: 800;
+    color: rgb(206, 34, 34);
+    /* position: absolute; */
+    /* width: 100%; */
+    /* height: 100%; */
+    /* top: 27%; */
+    /* left: 50%; */
+  
   
   }
   .content h1 span{
@@ -201,31 +196,19 @@
   
   .slide-content{
     position: absolute;
-    font-size: 20px !important;
+    font-size: 11px !important;
       top: 70%;
       left: 50%;
       /* transform: translate(-50%, -50%); */
       text-align: center;
-      color: #000;
-  }
-  .slide-content span{
-    color: rgb(95,199,174);
-    font-size: 20px;
+     
   }
   
-  .slide-content p{
-    font-size: 15px !important;
-    margin-top: 10px;
-    font-family: Courgette,cursive;
-  }
   
-  }
-  .home-btn{
-  position: absolute;
-  left:9%;
-  top: 52%;
   
-  }
+
+}
+ 
   /* ============================ */
   @media only screen and (max-width: 768px) {
   .content h5 {
@@ -245,15 +228,15 @@
   }
   
   
-  .home-btn{
-    position:relative;
-    top:15% ;
-    left: 30%;
-    line-height: 15px;
-    font-size: 10px;
-    padding: 5px 10px;
-  }
-  
+  /* .home-btn{ */
+    /* position:relative; */
+    /* top:15% ; */
+    /* left: 30%; */
+    /* line-height: 15px; */
+    /* font-size: 10px; */
+    /* padding: 5px 10px; */
+  /* } */
+  /*  */
   .arrow-prev,
   .arrow-next {
     width: 30px;
@@ -280,9 +263,74 @@
     line-height: 10px;
     margin-top: 2px;
   }
+  .caption h2 {
+    font-size: 20px;
+    font-weight: 800;
+    color: rgb(206, 34, 34);
+ 
+  
+  }
+  .banner-btn {
+    background:rgb(252,74,55);
+    color: #fffbfb !important;
+    display: block;
+    border: 1px solid rgb(252,74,55);
+    font-size: 11px!important;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    line-height: 2px;
+    overflow: hidden;
+    padding:20px 15px !important;
+    border-radius: 3em / 3em;
+    position: absolute;
+    top: 60%;
+    /* left:8.5%; */
+    /* bottom: 20%; */
+    text-align: center;
+    text-transform: uppercase;
+    -webkit-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+   
+    }
+    .arrow-prev{
+    display: none !important;
+    }
+    .arrow-next{
+      display: none !important;
+    }
+    .slide-content{
+      position: absolute;
+        top: 45%;
+        left: 33%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+  
+       
+    }
   
   }
   
-  
-  
-  
+  .banner-btn {
+    background:rgb(252,74,55);
+    color: #fffbfb !important;
+    display: block;
+    border: 1px solid rgb(252,74,55);
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    line-height: px;
+    overflow: hidden;
+    padding: 20px 32px;
+    border-radius: 3em / 3em;
+    position: absolute;
+    bottom: 40%;
+    left:8.5%;
+    text-align: center;
+    text-transform: uppercase;
+    -webkit-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+   
+    }
+
+    /* advertise */
+   
